manifests/drupal-memcached-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-memcached-deployment
spec:
  selector:
    matchLabels:
      app: drupal-memcached
  template:
    metadata:
      labels:
        app: drupal-memcached
    spec:
      containers:
      - name: drupal-memcached
        image: memcached
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 11211
