manifests/drupal-memcache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-memcached
spec:
  selector:
    app: drupal-memcached
    #app: stihl8
  ports:
  - port: 11211
    targetPort: 11211
  clusterIP: None
