manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stihl8
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stihl8
  type: ClusterIP
  #type: LoadBalancer
