manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: stihl7
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: stihl7
